<resources>
    <string name="app_name">Coronavirus Tracker</string>
    <string name="check">Check</string>
    <string name="india">India</string>
    <string name="global">World</string>
    <string name="total_cases">Total Cases</string>
    <string name="_1827126">1827126</string>
    <string name="_30000">30000</string>

    <!-- from the api source-->
    <string name="recovered">Recovered</string>
    <string name="deaths">Deceased</string>
    <string name="confirmed">Confirmed</string>
    <string name="active">Active</string>
    <string name="district">District</string>
    <string name="active_cases">Active Cases</string>
    <string name="confirmed_abbrev">Cnfrmd</string>
    <string name="recovered_abbrev">Rcvrd</string>
    <string name="notes">Notes</string>
    <string name="deceased_abbrev">Dceasd</string>
    <string name="new_tv">New</string>
    <string name="last_updated">Last Updated:</string>
    <string name="notify">Notify</string>
    <string name="loading_and_error">Loading And Error</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="could_not_connect_to_the_network_nplease_check_and_try_again">Could not connect to the network.\nPlease check and try again.</string>
    <string name="retry">Retry</string>

    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
