<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.sourabh.coronavirustracker.model.StatewiseDetails" />

        <variable
            name="clickListener"
            type="com.sourabh.coronavirustracker.ui.adapters.IndianStatesAdapter" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/state_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/light_grey"
        android:onClick="@{() -> clickListener.onClick(data)}"
        android:transitionName="indianCardViewItem"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/state_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@{data.stateOrUT}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toStartOf="@+id/new_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Karnataka" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="#31000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/state_tv" />

            <TextView
                android:id="@+id/conf"
                style="@style/normal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/confirmed"
                android:textColor="@color/colorBlack"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/confirmed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/open_sans"
                android:text="@{String.valueOf(data.totalConfirmed)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/conf"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/conf"
                app:layout_constraintTop_toBottomOf="@+id/conf"
                app:layout_constraintVertical_bias="0.0"
                tools:text="12330" />

            <TextView
                android:id="@+id/rec"
                style="@style/normal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/recovered"
                android:textColor="@color/colorBlack"
                app:layout_constraintBaseline_toBaselineOf="@+id/conf"
                app:layout_constraintStart_toEndOf="@+id/conf" />

            <TextView
                android:id="@+id/dea"
                style="@style/normal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/deaths"
                android:textColor="@color/colorBlack"
                app:layout_constraintBaseline_toBaselineOf="@+id/rec"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/rec" />

            <TextView
                android:id="@+id/recovered_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@{String.valueOf(data.recovered)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/confirmed_tv"
                app:layout_constraintEnd_toEndOf="@+id/rec"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/rec"
                tools:text="2134" />

            <TextView
                android:id="@+id/death_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@{String.valueOf(data.deaths)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/recovered_tv"
                app:layout_constraintEnd_toEndOf="@+id/dea"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/dea"
                tools:text="1342786876" />

            <TextView
                android:id="@+id/new_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/new_tv"
                android:textAppearance="@style/Details_Title"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/state_tv"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>